<resources>
    <string name="app_name">Con Rumbo</string>
    <string name="google_maps_key">AIzaSyB4y7dZQg3DI31JpktTO55LZEEZaPzlOIY</string>
    <string name="agregar_lugar_activity">Agregar lugar</string>
    <string name="error_informacion_ruta">Error al obtener la información de la ruta.</string>
    <string name="ruta_no_eliminada_favorita">Ruta no eliminada de favoritas.</string>
    <string name="ruta_no_agregada_favorita">Ruta no agregada a favoritas.</string>
    <string name="ruta_favorita_agregada_error">no se ha podido agregar a favoritas.</string>
    <string name="ruta_favorita_eliminada_error">Error al eliminar la ruta de favoritas.</string>
    <string name="buscador_lista_vacia">No se ha encontrado un lugar con dicho nombre.</string>
    <string name="buscador_si_rutas">Cada punto en el mapa es una ruta. Clica en alguna para ver más detalles.</string>
    <string name="buscador_no_rutas">No hay rutas para mostrar.</string>
    <string name="eliminar_ruta_fav">Eliminar ruta de favoritas</string>
    <string name="eliminar_ruta_fav_mensaje">¿Desea eliminar la ruta de favorita?</string>
    <string name="agregar_ruta_fav">Añadir ruta a favoritas</string>
    <string name="agregar_ruta_fav_mensaje">¿Desea marcar la ruta como favorita?</string>
    <string name="favorita">Favorita</string>
    <string name="busca_buscador">Escribe un lugar...</string>
    <string name="opciones_nada">Ninguna opción seleccionada.</string>
    <string name="mensaje_inicio_nulo">Los campos correo y contraseña no pueden estar vacíos.</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="recordar_passwd">Recordar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="datos_nec">Datos necesarios</string>
    <string name="siguiente">Siguiente</string>
    <string name="mensaje_inicio_error">La autenticación falló. Inténtelo de nuevo.</string>
    <string name="correo_no_nulo">El correo no puede estar vacío.</string>
    <string name="recordar">Recordar</string>
    <string name="correo_no_valido">El correo no es válido.</string>
    <string name="correo_no_existe">El correo no está registrado en la base de datos.</string>
    <string name="recordar_error">Error al enviar el correo. Inténtelo de nuevo.</string>
    <string name="correo_enviado">Se ha enviado un correo a la dirección proporcionada para el reestablecimiento de la contraseña.</string>
    <string name="registro_nulo">Los campos de correo y clave no pueden estar vacíos.</string>
    <string name="datos_opc">Datos opcionales</string>
    <string name="privacidad_pub">Cuenta pública</string>
    <string name="crear_perfil">Crear perfil</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="weak_password">The given password is invalid. [ Password should be at least 6 characters ]</string>
    <string name="clave_debil">La clave introducida no es suficientemente fuerte.</string>
    <string name="email_already_use">The email address is already in use by another account.</string>
    <string name="correo_ya_en_uso">Ya existe una cuenta con dicho correo.</string>
    <string name="registro_error">Error al registrar usuario. Inténtelo de nuevo o mas tarde.</string>
    <string name="invalid_email">The email address is badly formatted.</string>
    <string name="email_not_exits">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="geolicalizar_vacio">Para buscar un lugar escriba el nombre en el cajón de búsqueda.</string>
    <string name="lugar_agregado_exito"> ha sido agregada con éxito a su lista de Lugares visitados.</string>
    <string name="lugar_agregado_error">Error al agregar el lugar a su lista de Lugares visitados.</string>
    <string name="lugares_visitados_vacio">Su lista de lugares visitados está vacía.</string>
    <string name="lugar_visitado_eliminado_exito">Lugar visitado eliminado con éxito.</string>
    <string name="agregar_lugar">Añadir a lugares visitados</string>
    <string name="busca_lugar">Escribe un lugar...</string>
    <string name="lugares_visitados">Lugares visitados</string>
    <string name="add_ciudad">Añadir lugar visitado</string>
    <string name="borrar_lugar_visitado">Eliminar lugar de visitados</string>
    <string name="informacion_punto">Información sobre el punto de interés</string>
    <string name="horario_punto2">Horario</string>
    <string name="precio_punto2">Precio</string>
    <string name="enlace_punto_2">Enlace</string>
    <string name="audioguia_punto2">Audioguía</string>
    <string name="datos_curiosos">Datos curiosos</string>
    <string name="opinion_punto">Opinión personal</string>
    <string name="punto_vacio">El punto no contiene información.</string>
    <string name="aviso_creacion_pdi">Clic largo en el mapa para añadir un punto de interés o realiza la búsqueda por nombre en el cajón.</string>
    <string name="no_puntos_en_ruta">La ruta no tiene puntos asociados.</string>
    <string name="error_punto">Error al obtener los puntos de la ruta.</string>
    <string name="exito_creacion_puntos">Puntos agregados con éxito a su ruta.</string>
    <string name="borrar_punto">Eliminar punto</string>
    <string name="pdi_eliminado">Punto de interés eliminado con éxito.</string>
    <string name="nombre_punto">Nombre del punto de interés</string>
    <string name="historia_punto">Historia del punto (max. 2000 caracteres)</string>
    <string name="datoscuriosos_punto">Datos curiosos del punto (max. 2000 caracteres)</string>
    <string name="horario_punto">Horario apertura</string>
    <string name="precio_punto">Precio de la entrada</string>
    <string name="audioguia_punto">¿Tiene audioguía?</string>
    <string name="modificar_punto_interes">Modificar punto de interés</string>
    <string name="enlace_punto">Enlace a la página</string>
    <string name="opinion_personal_punto">Opinión personal (máx. 500 caracteres)</string>
    <string name="crear_punto_interes">Crear punto de interés</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="enlace">Enlace al blog</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="rutas_propias">Rutas propias</string>
    <string name="fav">Favoritos</string>
    <string name="configuracion_cuenta">Configuracion de la cuenta</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="eliminar_cuenta_mensaje">¿Desea eliminar la cuenta? Perderá todos sus datos.</string>
    <string name="cancelar">Cancelar</string>
    <string name="perfil_error">Error al obtener el perfil.</string>
    <string name="aviso_nulo_modificar_correo">El nuevo correo y la clave no pueden estar vacíos.</string>
    <string name="aviso_igual_modificar_correo">El nuevo correo es el mismo de la cuenta. Seleccione un correo diferente.</string>
    <string name="aviso_modificar_correo">Por seguridad, se solicita la contraseña   de la cuenta para verificar el cambio de correo.</string>
    <string name="correo_electronico_nuevo">Nuevo correo electrónico</string>
    <string name="perfil">Perfil</string>
    <string name="modificar_datos_perfil_no_modificado">No se han observado cambios en los datos. Nada para modificar.</string>
    <string name="nombre_eliminar_exito">Nombre eliminado con éxito.</string>
    <string name="nombre_eliminar_error">Error al eliminar el nombre. Inténtelo de nuevo o más tarde.</string>
    <string name="descripcion_eliminar_exito">Descripción eliminada con éxito.</string>
    <string name="descripcion_eliminar_error">Error al eliminar la descripción. Inténtelo de nuevo o más tarde.</string>
    <string name="enlace_eliminar_exito">Enlace eliminado con éxito.</string>
    <string name="enlace_eliminar_error">Error al eliminar el enlace. Inténtelo de nuevo o más tarde.</string>
    <string name="foto_eliminar_exito">Imagen eliminada con éxito.</string>
    <string name="foto_eliminar_error">Error al eliminar la imagen. Inténtelo de nuevo o más tarde.</string>
    <string name="usuario_eliminado">Usuario eliminado con éxito.</string>
    <string name="eliminar_error">Error al eliminar la cuenta. Inténtelo de nuevo o más tarde.</string>
    <string name="modificar_datos_modificar_exito">Datos modificados con éxito.</string>
    <string name="correo_modificado_exito">Correo modificado con éxito.</string>
    <string name="correo_modificado_error">Error al modificar el correo. Inténtelo de nuevo o más tarde.</string>
    <string name="correo_modificar_no_autenticado">La contraseña no es correcta.</string>
    <string name="informacion_ruta">Información de la ruta</string>
    <string name="nombre_ruta">Nombre de la ruta</string>
    <string name="tipo_ruta">Tipo de la ruta</string>
    <string name="privacidad_pub_ruta">Ruta pública</string>
    <string name="mapa_base">Mapa base:</string>
    <string name="mapa_basico">Mapa básico</string>
    <string name="mapa_satelite">Mapa de satélite</string>
    <string name="mapa_terreno">Mapa del terreno</string>
    <string name="mapa_hibrido">Mapa híbrido</string>
    <string name="duracion_ruta">Duración estimada</string>
    <string name="distancia_ruta">Distancia estimada</string>
    <string name="historia">Historia</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="eliminar_ruta">Eliminar ruta</string>
    <string name="eliminar_ruta_mensaje">¿Desea eliminar la ruta? Perderá todos los datos y puntos de interés asociados a la ruta.</string>
    <string name="eliminar">Eliminar</string>
    <string name="add_fav">Añadir a rutas favoritas</string>
    <string name="ver_ruta">Ver ruta</string>
    <string name="terminar_ruta">Terminar</string>
    <string name="rutas_favoritas">Rutas favoritas</string>
    <string name="modificar_ruta">Modificar ruta</string>
    <string name="tipo_ruta_info">"Tipo: "</string>
    <string name="num_puntos">"Número de puntos: "</string>
    <string name="nombre_ruta_existe">Ya existe una ruta con dicho nombre.</string>
    <string name="crear_ruta">Crear ruta</string>
    <string name="nombre_ruta_vacia">El nombre de la ruta no puede estar vacío.</string>
    <string name="borrar_ruta_favorita">Eliminar ruta de favoritas</string>
    <string name="ruta_favorita_privada">No puedes ver la ruta, la persona propietaria la ha establecido como privada.</string>
    <string name="no_ruta">La ruta no se encuentra, puede que el propietario la haya eliminado.</string>
    <string name="error_ruta">Error al obtener la ruta de la base de datos. Inténtelo de nuevo o más tarde.</string>
    <string name="registrar_ruta_error">Error al crear la ruta. Inténtelo de nuevo o más tarde.</string>
    <string name="registrar_ruta_exito">Ruta creada con éxito. Ya puede personalizar su ruta añadiendo puntos de interés.</string>
    <string name="modificar_ruta_exito">Ruta modificada con éxito.</string>
    <string name="ruta_favorita_eliminada_exito">Ruta eliminada de favoritas con éxito.</string>
    <string name="rutas_favoritas_vacio">No tiene rutas favoritas.</string>
    <string name="subiendo_imagen">Subiendo imagen...</string>
    <string name="imagen_subida">Imagen subida</string>
    <string name="imagen_fallo">Error al subir la imagen</string>
    <string name="seleccionar_imagen">Seleccionar imagen...</string>
    <string name="modificar_datos">Modificar datos</string>
    <string name="modificar_correo">Modificar correo</string>
    <string name="modificar_imagen">Modificar imagen</string>
    <string name="eliminar_datos">Eliminar datos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="buscador">Buscar</string>
    <string name="creacion">Crear</string>
</resources>