<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:textSize="20dp"
        android:textColor="@color/primary_color_dark"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:text="@string/datos_opc"
        android:textStyle="bold"
        android:textColor="@color/primary_color" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imagen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:src="@mipmap/sin_foto"
        android:scaleType="centerCrop"
        app:riv_corner_radius="50dp"/>

    <EditText
        android:id="@+id/usuario"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/nombre_usuario"
        android:maxLength="40"/>

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/descripcion"
        android:maxLength="150"/>

    <EditText
        android:id="@+id/enlace"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/enlace"
        android:textIsSelectable="true"
        android:maxLength="100"/>

    <Switch
        android:id="@+id/privacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checked="true"
        android:showText="false"
        android:text="@string/privacidad_pub"
        android:textAppearance="?android:textAppearanceSmall"
        tools:checked="false" />

    <Button
        android:id="@+id/crear_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/boton"
        android:text="@string/crear_perfil"
        android:textColor="@color/white"/>
</LinearLayout>