<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logotipo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/registro"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/primary_color_dark" />

    <TextView
        android:id="@+id/nombre_ruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:text="@string/datos_nec"/>

    <EditText
        android:id="@+id/correo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:hint="@string/correo_electronico"/>

    <EditText
        android:id="@+id/passwd"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/contraseña"
        android:maxLength="50"/>

    <Button
        android:id="@+id/sig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/siguiente"
        android:textColor="@color/white"
        android:background="@drawable/boton"/>

</LinearLayout>