<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/toolbar">

        <EditText
            android:id="@+id/nombre_modificar_perfil"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:inputType="text"
            android:maxLength="40"
            android:scrollbars="vertical"
            android:hint="@string/nombre_usuario"/>

        <EditText
            android:id="@+id/descripcion_modificar_perfil"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:inputType="text"
            android:maxLength="150"
            android:maxLines="4"
            android:scrollbars="vertical"
            android:hint="@string/descripcion"/>

        <EditText
            android:id="@+id/enlace_modificar_perfil"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:hint="@string/enlace"/>

        <Switch
            android:id="@+id/privacidad_modificar_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:checked="true"
            android:showText="false"
            android:text="@string/privacidad_pub"
            android:textAppearance="?android:textAppearanceSmall"
            tools:checked="false" />
    </LinearLayout>
</RelativeLayout>