<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/primary_color" />

    <LinearLayout
        android:id="@+id/informacion_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/toolbar"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/nombre_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:textStyle="bold"
                android:gravity="start"
                android:text="@string/nombre"/>

            <TextView
                android:id="@+id/descripcion_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:gravity="start"
                android:text="@string/descripcion"/>
            <TextView
                android:id="@+id/enlace_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/secondary_color"
                android:gravity="start"
                android:textIsSelectable="true"
                android:text="@string/enlace"/>
        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imagen_perfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/sin_foto"
            android:layout_gravity="end|center"
            android:contentDescription="@string/foto_perfil"
            android:scaleType="centerCrop"
            app:riv_corner_radius="50dp"/>
    </LinearLayout>

    <View
        android:id="@+id/separador"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/secondary_color"
        android:layout_below="@+id/informacion_perfil"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/separador"
        android:layout_above="@+id/bottom_bar">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            app:tabMode="fixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rutas_propias" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fav"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary_color"
        android:theme="@style/barra_navegacion"
        app:menu="@menu/navigation_bottom"
        app:labelVisibilityMode="unlabeled"/>
</RelativeLayout>