<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/aviso_modificar_correo"
            android:textAppearance="?attr/textAppearanceBody2"/>

        <EditText
            android:id="@+id/correo_nuevo_modificar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:scrollbars="vertical"
            android:hint="@string/correo_electronico_nuevo"/>

        <EditText
            android:id="@+id/clave_modificar_correo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:maxLength="50"
            android:scrollbars="horizontal"
            android:hint="@string/contraseña"/>
    </LinearLayout>
</RelativeLayout>